# DevClean

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  safety_report.yml
.github/workflows/: ci.yml  codeql.yml
docs/: adapter-support.md  coverage-matrix.md  implementation-status.md  open-source-comparison.md  release-engineering.md  requirements-traceability.md  threat-model.md
docs/adr/: ADR-001-independent-engine.md  ADR-002-ai-excluded.md  ADR-003-third-party-license-boundary.md  ADR-004-controlled-cleanup-workflow.md
docs/evidence/: G0-release-readiness-protocol.md  G1-physical-boundary-protocol.md  G2-procmon-smoke-protocol.md  G5-direct-fs-race-protocol.md  README.md
docs/evidence/benchmarks/: 2026-07-12-streaming-million.json
docs/evidence/gates/: G6-broker-verification.md
docs/evidence/incidents/: 2026-07-12-scan-time-deletion-summary.json
docs/evidence/smoke/: 2026-07-11-local-adapters.json
docs/evidence/templates/: g0-ci-attestation.template.json  g0-codeql-attestation.template.json  g0-owner-attestation.template.json  g0-release-manifest.template.json  g1-physical-manifest.template.json  g2-machine-manifest.template.json  g5-race-manifest.template.json
schemas/: broker-install-manifest.schema.json  gate-evidence.schema.json  inventory-plan.schema.json  resource.schema.json  scan-report.schema.json
scripts/: audit_source_boundary.py  benchmark_streaming_state.py  build_release.ps1  build_windows_exe.ps1  capture_service_state.ps1  devclean_gui_entry.py  reclaimer_gui_entry.py  validate_gate_evidence.py  validate_procmon_csv.py  validate_release_artifacts.py  validate_schemas.py  verify_broker_install.py
src/devclean/: __init__.py
src/devclean/adapters/: __init__.py  base.py  catalog.py  command.py  conda.py  discovery.py  docker.py  filesystem_inventory.py  huggingface.py  npm.py  ollama.py  pip_cache.py  pnpm.py  uv_cache.py  vscode.py  windows_maintenance.py
src/devclean/cli/: main.py
src/devclean/core/: __init__.py  ai_review_contract.py  cleanup_catalog.py  cleanup_journal.py  doctor.py  duplicates.py  incremental.py  paths.py  policy.py  reporting.py  (+4 more)
src/reclaimer/: __init__.py
tests/: test_action_history.py  test_adapter_catalog.py  test_adapter_command.py  test_ai_review.py  test_ai_review_contract.py  test_bounded_process.py  test_broker_gate.py  test_change_monitor.py  test_cleanup_catalog.py  test_cleanup_journal.py  test_cli.py  test_conda_adapter.py  test_controlled_cleanup_closed_loop.py  test_docker_adapter.py  test_docs_baseline.py  test_doctor.py  test_duplicates.py  test_evidence_store.py  test_exact_cleanup.py  test_gate_evidence.py  test_huggingface_adapter.py  test_incremental.py  test_incremental_session.py  test_json_contract.py  test_known_folders.py  test_models.py  test_npm_adapter.py  test_ollama_adapter.py  test_paths.py  test_pip_cache_adapter.py  test_pnpm_adapter.py  test_postscan_cleanup.py  test_procmon_validator.py  test_recycle.py  test_redaction.py  test_release_engineering.py  test_reporting.py  test_scan_insights.py  test_scanner.py  test_scanner_resources.py  (+9 more)
tests/fs_integration/: test_windows_boundaries.py  test_windows_change_monitor.py  test_windows_exact_cleanup.py  test_windows_incremental_session.py
(+85 files in other folders)
